# agent-interface

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  STARTER_PROMPT.md  fly.toml  pyproject.toml
docs/: DEPLOY.md  ORCHESTRATOR.md
docs/workflows/: agent-interface-cli.md
scripts/: preflight.sh
src/agent_interface/: __init__.py  assess.py  bot_runner.py  catalog.py  cli.py  daemon.py  dashboards.py  db.py  features.py  findings.py  flake.py  hooks.py  insights.py  jobs.py  models.py  notes.py  optimizer.py  registry.py  runlog.py  scaffold.py  scan.py  states.py  supervisor.py  telegram.py  usage.py
tests/: conftest.py  test_assess.py  test_auto_ops.py  test_catalog.py  test_cli.py  test_daemon.py  test_dashboards.py  test_delivery.py  test_done_commit.py  test_features.py  test_findings.py  test_flake.py  test_heartbeat.py  test_hooks.py  test_insights.py  test_jobs.py  test_notes.py  test_optimizer.py  test_orchestrator.py  test_orchestrator_hooks.py  test_pid_anchor.py  test_plan_dispatch.py  test_reconcile.py  test_registry.py  test_runlog.py  test_scaffold.py  test_scan.py  test_serve.py  test_states.py  test_supervisor.py  test_telegram.py  test_telegram_routing.py  test_web.py
ui/: README.md  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: board-column.tsx  board.tsx  bulk-actions-bar.tsx  help-modal.tsx  new-project-dialog.tsx  new-task-dialog.tsx  progress-donut.tsx  projects-provider.tsx  sidebar.tsx  task-card.tsx  task-detail-sheet.tsx  theme-toggle.tsx  (+3 more)
(+24 files in other folders)
