[project]
name = "agent-interface"
version = "0.1.0"
description = "A remote-first control plane for Claude Code sessions"
requires-python = ">=3.11"
dependencies = ["typer>=0.9"]

[project.scripts]
agi = "agent_interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_interface"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
